--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 # dependencies
 /node_modules
 
+#noconfigfile
+/src/app/shared/settings.ts 
 # profiling files
 chrome-profiler-events*.json
 speed-measure-plugin*.json
