--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^2.9.3",
     "exceljs": "^4.2.1",
     "file-saver": "^2.0.5",
+    "mat-table-exporter": "^10.2.3",
     "ng2-charts": "^2.4.2",
     "ngx-cookie": "^5.0.2",
     "rxjs": "~6.6.0",
